deploy-link-projects

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -41,8 +41,8 @@ import ThreeJSIcon from "./icons/ThreeJSIcon.astro";
       <ThreeJSIcon class="w-7 h-7" />
     </div>
     <div class="project-links">
-      <a href="https://github.com/Santiagosba/Bmth-Media-Player.git" target="_blank" class="btn">View Code</a>
-      <a href="https://rubik-demo.vercel.app" target="_blank" class="btn">View Project</a>
+      <a href="https://github.com/Santiagosba/Rubik-Cube" target="_blank" class="btn">View Code</a>
+      <a href="https://rubikcube3d.netlify.app/" target="_blank" class="btn">View Project</a>
     </div>
   </article>
 
