--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -26,7 +26,7 @@ import ThreeJSIcon from "./icons/ThreeJSIcon.astro";
     </div>
     <div class="project-links">
       <a href="https://github.com/Santiagosba/Bmth-Media-Player" target="_blank" class="btn">View Code</a>
-      <a href="https://music-demo.vercel.app" target="_blank" class="btn">View Project</a>
+      <a href="https://bmthmediaplayer.netlify.app/" target="_blank" class="btn">View Project</a>
     </div>
   </article>
 
@@ -74,7 +74,7 @@ import ThreeJSIcon from "./icons/ThreeJSIcon.astro";
     </div>
     <div class="project-links">
       <a href="https://github.com/Santiagosba/Digital-World-Clock" target="_blank" class="btn">View Code</a>
-      <a href="https://worldclock-demo.vercel.app" target="_blank" class="btn">View Project</a>
+      <a href="https://militarclock.netlify.app/" target="_blank" class="btn">View Project</a>
     </div>
   </article>
 
